chore: use Java 17 code style